[package]
name = "tigtag3d"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy.workspace = true
rand.workspace = true
chrono.workspace = true

tigtag3d_inside.workspace = true
tigtag_inside.workspace = true
template.workspace = true
