[package]
name = "tigtag3d"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy.workspace = true
rand.workspace = true
regex.workspace = true

template.workspace = true

[features]
sprite_off = [] # cargo run --features sprite_off
